--- a/index.html
+++ b/index.html
@@ -36,27 +36,417 @@
               </li>
             </ul>
           </nav>
-          <div class="header__lang">
-            <img src="image/Eng-flag.png" alt="icon" />
-            <p>EN</p>
-            <img src="image/icon_chevron.svg" alt="icon" />
+          <div class="conversation">
+            <div class="conversation__lang">
+              <img
+                class="conversation__lang__img"
+                src="image/Eng-flag.png"
+                alt="icon"
+              />
+              <p class="conversation__lang__eng">EN</p>
+              <img src="image/icon_chevron.svg" alt="icon" />
+            </div>
+            <button class="conversation__btn">Войти</button>
           </div>
-          <button class="header__btn">Войти</button>
         </div>
 
         <main class="main">
-          <section class="hero">
-            <div class="container">
-              <div class="hero__left">
-                <span class="hero__info">+300 прошедших отбор психологов</span>
-                <h1 class="hero__title">Сессии с психологом Онлайн</h1>
-                <a class="hero__link" href="#">Начать беседу</a>
+          <div class="container">
+            <section class="banner">
+              <div class="banner__left">
+                <span class="banner__info"
+                  >+300 прошедших отбор психологов</span
+                >
+                <h1 class="banner__title">Сессии с психологом Онлайн</h1>
+                <a class="banner__link" href="#">Начать беседу</a>
               </div>
-              <div class="hero__right">
+              <div class="banner__right">
                 <img src="image/man.png" alt="man" />
+                <div class="cloud1">
+                  <img src="./image/Cloud1.png" alt="cloud" />
+                </div>
+                <div class="cloud2">
+                  <img src="./image/Cloud2.png" alt="cloud" />
+                </div>
+                <div class="cloud3">
+                  <img src="./image/Cloud3.png" alt="cloud" />
+                </div>
               </div>
-            </div>
-          </section>
+            </section>
+
+            <section class="app">
+              <div class="app__left">
+                <iframe
+                  width="615"
+                  height="342"
+                  src="https://www.youtube.com/embed/OxHsER3tQ9M"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
+              </div>
+              <div class="app__right">
+                <h3 class="app__title title">
+                  Скачайте бесплатно приложение SPEAK
+                </h3>
+                <div class="speak">
+                  <div class="speak__logo">
+                    <a href="#"
+                      ><img src="./image/Speak Logo 2.svg" alt="logo"
+                    /></a>
+                  </div>
+                  <div class="speak__list">
+                    <h6 class="speak__title">Speak</h6>
+                    <span class="speak__txt"> онлайн сессии с психологом </span>
+                    <span class="speak__txt">доступно для iOS и Android</span>
+                  </div>
+                </div>
+                <div class="btns">
+                  <div class="appstore">
+                    <img src="./image/appstore.png" alt="appstore" />
+                  </div>
+                  <div class="appstore">
+                    <img src="./image/playstore.png" alt="playstore" />
+                  </div>
+                </div>
+              </div>
+            </section>
+
+            <section class="speakers">
+              <h3 class="speakers__title title">
+                Психологи работающие с актуальными темами
+              </h3>
+              <ul class="tags">
+                <li class="tags__item">
+                  <a class="tags__link" href="#">Чувства</a>
+                </li>
+                <li class="tags__item">
+                  <a class="tags__link" href="#">Одиночество</a>
+                </li>
+                <li class="tags__item">
+                  <a class="tags__link" href="#">Вредные привычки</a>
+                </li>
+                <li class="tags__item">
+                  <a class="tags__link" href="#">Отношения</a>
+                </li>
+                <li class="tags__item">
+                  <a class="tags__link" href="#">Работа</a>
+                </li>
+                <li class="tags__item">
+                  <a class="tags__link" href="#">Смыслы</a>
+                </li>
+                <li class="tags__item">
+                  <a class="tags__link" href="#">Отношения с близкими</a>
+                </li>
+                <button class="tags__btn">+ 300 психологов</button>
+              </ul>
+              <ul class="slider">
+                <li class="slider__items">
+                  <img
+                    class="slider__items-img"
+                    src="./image/Ilya.png"
+                    alt="photo"
+                  />
+                  <h6 class="slider__title">Илья Благов</h6>
+                  <div class="bottom">
+                    <div class="bottom__rating">
+                      <div class="bottom__rating__item">★</div>
+                      <div class="bottom__rating__item">★</div>
+                      <div class="bottom__rating__item">★</div>
+                      <div class="bottom__rating__item">★</div>
+                      <div class="bottom__rating__item">★</div>
+                    </div>
+                    <div class="bottom__arrow">
+                      <a class="bottom__arrow__link" href="#"
+                        ><img src="./image/icon_arrow-right.png" alt="icon"
+                      /></a>
+                    </div>
+                  </div>
+                </li>
+                <li class="slider__items">
+                  <img
+                    class="slider__items-img"
+                    src="./image/Ivanna.png"
+                    alt="photo"
+                  />
+                  <h6 class="slider__title">Иванна Есина</h6>
+                  <div class="bottom">
+                    <div class="bottom__rating">
+                      <div class="bottom__rating__item">★</div>
+                      <div class="bottom__rating__item">★</div>
+                      <div class="bottom__rating__item">★</div>
+                      <div class="bottom__rating__item">★</div>
+                      <div class="bottom__rating__item">★</div>
+                    </div>
+                    <div class="bottom__arrow">
+                      <a class="bottom__arrow__link" href="#"
+                        ><img src="./image/icon_arrow-right.png" alt="icon"
+                      /></a>
+                    </div>
+                  </div>
+                </li>
+                <li class="slider__items">
+                  <img
+                    class="slider__items-img"
+                    src="./image/Artur.png"
+                    alt="photo"
+                  />
+                  <h6 class="slider__title">Артур Островский</h6>
+                  <div class="bottom">
+                    <div class="bottom__rating">
+                      <div class="bottom__rating__item">★</div>
+                      <div class="bottom__rating__item">★</div>
+                      <div class="bottom__rating__item">★</div>
+                      <div class="bottom__rating__item">★</div>
+                      <div class="bottom__rating__item">★</div>
+                    </div>
+                    <div class="bottom__arrow">
+                      <a class="bottom__arrow__link" href="#"
+                        ><img src="./image/icon_arrow-right.png" alt="icon"
+                      /></a>
+                    </div>
+                  </div>
+                </li>
+                <li class="slider__items">
+                  <img
+                    class="slider__items-img"
+                    src="./image/Yulia.png"
+                    alt="photo"
+                  />
+                  <h6 class="slider__title">Юля Заграничная</h6>
+                  <div class="bottom">
+                    <div class="bottom__rating">
+                      <div class="bottom__rating__item">★</div>
+                      <div class="bottom__rating__item">★</div>
+                      <div class="bottom__rating__item">★</div>
+                      <div class="bottom__rating__item">★</div>
+                      <div class="bottom__rating__item">★</div>
+                    </div>
+                    <div class="bottom__arrow">
+                      <a class="bottom__arrow__link" href="#"
+                        ><img src="./image/icon_arrow-right.png" alt="icon"
+                      /></a>
+                    </div>
+                  </div>
+                </li>
+                <li class="slider__items">
+                  <img
+                    class="slider__items-img"
+                    src="./image/Andrey.png"
+                    alt="photo"
+                  />
+                  <h6 class="slider__title">Андрей Ян</h6>
+                  <div class="bottom">
+                    <div class="bottom__rating">
+                      <div class="bottom__rating__item">★</div>
+                      <div class="bottom__rating__item">★</div>
+                      <div class="bottom__rating__item">★</div>
+                      <div class="bottom__rating__item">★</div>
+                      <div class="bottom__rating__item">★</div>
+                    </div>
+                    <div class="bottom__arrow">
+                      <a class="bottom__arrow__link" href="#"
+                        ><img src="./image/icon_arrow-right.png" alt="icon"
+                      /></a>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+              <div class="dots">
+                <div class="dots__line"></div>
+                <div class="dots__line"></div>
+                <div class="dots__line"></div>
+                <div class="dots__line"></div>
+                <div class="dots__line"></div>
+                <div class="dots__line"></div>
+                <div class="dots__line"></div>
+                <div class="dots__line"></div>
+              </div>
+            </section>
+
+            <section class="help">
+              <div class="help__left">
+                <h3 class="help__title title">Поможем вам</h3>
+                <ul class="list">
+                  <li class="list__item">
+                    Разрешить причины сложных отношений с партнером
+                  </li>
+                  <li class="list__item">
+                    Снять или снизить остроту переживаний
+                  </li>
+                  <li class="list__item">
+                    Справиться с выгоранием на работе и найти мотивацию
+                  </li>
+                  <li class="list__item">
+                    Понять себя в отношениях с близкими людьми
+                  </li>
+                  <li class="list__item">Найти себя и понимать свои желания</li>
+                  <li class="list__item">
+                    Исследовать и управлять изменениями в своей жизни
+                  </li>
+                </ul>
+              </div>
+              <div class="help__right">
+                <img src="./image/img.png" alt="img" />
+              </div>
+            </section>
+
+            <section class="advantage">
+              <div class="advantage__left">
+                <img
+                  class="advantage__left-img"
+                  src="./image/Mobile.png"
+                  alt="phone"
+                />
+              </div>
+              <div class="advantage__right">
+                <h3 class="advantage__title title">
+                  Преимущества онлайн сессий с психологом
+                </h3>
+                <ul class="adv-list">
+                  <li class="adv-list__item">
+                    <h6 class="adv-list__title">
+                      Занимайтесь где и как удобно
+                    </h6>
+                    <p class="adv-list__txt">
+                      Дома или в поездке и в любом часовом поясе
+                    </p>
+                  </li>
+                  <li class="adv-list__item">
+                    <h6 class="adv-list__title">
+                      Меньше забот- больше мотивации
+                    </h6>
+                    <p class="adv-list__txt">
+                      Не тратьте время на дорогу и управляйте занятиями в два
+                      клика
+                    </p>
+                  </li>
+                  <li class="adv-list__item">
+                    <h6 class="adv-list__title">Доверяйте себе</h6>
+                    <p class="adv-list__txt">
+                      Выбирайте среди проверенных психологов, которые
+                      специаллизируются на ваших запросах
+                    </p>
+                  </li>
+                </ul>
+              </div>
+            </section>
+
+            <section class="steps">
+              <div class="steps__left">
+                <h3 class="steps__title title">
+                  Как мы отбираем специалистов?
+                </h3>
+                <span class="steps__info"
+                  >Отбор проходят меньше 10% специаллистов</span
+                >
+                <ul class="steps-list">
+                  <li class="steps-list__item">
+                    <div class="num">
+                      <img src="./image/1.png" alt="number" />
+                    </div>
+                    <div class="alltext">
+                      <h6 class="steps-list__item__title">
+                        Документы об образовании
+                      </h6>
+                      <p class="steps-list__item__descr">
+                        Обязательно иметь высшее психологическое образование и
+                        сертификаты для ведения психотерапии
+                      </p>
+                    </div>
+                  </li>
+                  <li class="steps-list__item">
+                    <div class="num">
+                      <img src="./image/2num.png" alt="number" />
+                    </div>
+                    <div class="alltext">
+                      <h6 class="steps-list__item__title">
+                        Опыт частной практики и личной терапии
+                      </h6>
+                      <p class="steps-list__item__descr">
+                        Нужно не менее 3-х лет частной практики, личная терапия
+                        и регулярные супервизии
+                      </p>
+                    </div>
+                  </li>
+                  <li class="steps-list__item">
+                    <div class="num">
+                      <img src="./image/3num.png" alt="number" />
+                    </div>
+                    <div class="alltext">
+                      <h6 class="steps-list__item__title">
+                        Собеседование с нашим экспертом-ментором
+                      </h6>
+                      <p class="steps-list__item__descr">
+                        Отслеживаются коммуникативные способности, уровень
+                        эмпатии, манера и стиль беседы, проффесиональные
+                        компетенции
+                      </p>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <div class="steps__right">
+                <img src="./image/steps-img.png" alt="man" />
+              </div>
+            </section>
+
+            <section class="about">
+              <h3 class="about__title title">О сервисе</h3>
+              <div class="about__inner">
+                <div class="about__left">
+                  <iframe
+                    width="615"
+                    height="342"
+                    src="https://www.youtube.com/embed/OxHsER3tQ9M"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                  ></iframe>
+                </div>
+                <div class="about__right">
+                  <ul class="numbers">
+                    <li class="numbers__item">
+                      <div class="numbers__item__nums">900 +</div>
+                      <p class="numbers__item__info">регистраций вчера</p>
+                    </li>
+                    <li class="numbers__item">
+                      <div class="numbers__item__nums">75 000 +</div>
+                      <p class="numbers__item__info">проведено сессий</p>
+                    </li>
+                    <li class="numbers__item">
+                      <div class="numbers__item__nums">354 +</div>
+                      <p class="numbers__item__info">психологов</p>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="services">
+                <div class="service">
+                  <div class="service__img">
+                    <img src="./image/service-img.png" alt="image" />
+                  </div>
+                  <div class="service__descr">
+                    <h6 class="service__descr__title">Подбор “По позже”</h6>
+                    <p class="service__descr__txt">
+                      Подбор с возможностью бронирование сессии на будущее
+                    </p>
+                  </div>
+                </div>
+                <div class="service">
+                  <img src="./image/service2-img.png" alt="image" />
+                  <div class="service__descr">
+                    <h6 class="service__descr__title">Подбор “Сейчас”</h6>
+                    <p class="service__descr__txt">
+                      Подбор с возможностью начала сессии “здесь и сейчас”
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </section>
+          </div>
         </main>
       </div>
     </header>
