--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       href="https://fonts.googleapis.com/css2?family=Cinzel&family=Inter:wght@400;500;600;700&family=Kumbh+Sans:wght@400;700&family=Lato:wght@400;900&family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cinzel&family=Inter:wght@400;500;600;700&family=Kumbh+Sans:wght@400;700&family=Lato:wght@400;900&family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300&family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="CSS/main.min.css" />
   </head>
   <body>
@@ -49,6 +55,7 @@
             <button class="conversation__btn">Войти</button>
           </div>
         </div>
+      </header>
 
         <main class="main">
           <div class="container">
@@ -446,9 +453,182 @@
                 </div>
               </div>
             </section>
+
+            <section class="how-work">
+              <h3 class="how-work__title title">Как это устроено</h3>
+              <div class="how-work__inner">
+                <div class="step">
+                  <div class="step__info">
+                    <div class="step__img">1</div>
+                    <div class="step__item">
+                      <h6 class="step__item__title">
+                        Заполните простую анкету
+                      </h6>
+                      <p class="step__item__txt">
+                        Расскажите, что вас беспокоит и что важно в психологе.
+                      </p>
+                    </div>
+                  </div>
+                  <div class="step__info">
+                    <div class="step__img">2</div>
+                    <div class="step__item">
+                      <h6 class="step__item__title">
+                        Выберите способ связи с психологом
+                      </h6>
+                      <p class="step__item__txt">
+                        49руб/мин по <span>аудио/видео связи</span>200руб за 24
+                        часа <span>чата + аудио сообщения</span>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="how-work__img">
+                  <img src="./image/Mobile2.png" alt="mobile" />
+                  <button class="how-work__button">Начать общение</button>
+                </div>
+                <div class="step">
+                  <div class="step__info">
+                    <div class="step__img">3</div>
+                    <div class="step__item">
+                      <h6 class="step__item__title">Выберите психолога</h6>
+                      <p class="step__item__txt">
+                        Выберите понравившегося психолога
+                      </p>
+                    </div>
+                  </div>
+                  <div class="step__info">
+                    <div class="step__img">4</div>
+                    <div class="step__item">
+                      <h6 class="step__item__title">Начните общение</h6>
+                      <p class="step__item__txt">
+                        Все общение происходит через платформу SPEAK. Вслучае
+                        если психолог вам не понравится, вы можете заменить его
+                        без дополнительных переплат
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
+
+            <section class="servises">
+              <h3 class="servises__title title">Услуги</h3>
+              <div class="servises__inner">
+                <div class="card__left">
+                  <div class="card__payment">
+                    <p class="card__payment-time">24 часа чата</p>
+                    <p class="card__payment-price">
+                      4200₽<span class="card__payment-week">/24 часа</span>
+                    </p>
+                  </div>
+                  <ul class="card__list">
+                    <li class="card__item">
+                      24 часа доступа к чату с психологом
+                    </li>
+                    <li class="card__item">Аудио сообщения</li>
+                  </ul>
+                  <button class="card__btn">Перейти</button>
+                </div>
+                <div class="card__right">
+                  <div class="card__popular">Популярное</div>
+                  <div class="card__top">
+                    <p class="card__top-info">Аудио/Видео сессии</p>
+                    <p class="card__top-price">
+                      49₽<span class="card__top-min">/ 1 минута</span>
+                    </p>
+                  </div>
+                  <ul class="card__list">
+                    <li class="card__item2">
+                      Безлимитный доступа к чату с психологом до начала сессии
+                    </li>
+                    <li class="card__item2">Аудио/Видео звонки</li>
+                    <li class="card__item2">
+                      Нет лимитов по времени разговора
+                    </li>
+                  </ul>
+                  <div class="card__bottom">
+                    <div class="card__bottom-input">
+                      <img src="./image/icon_play.svg" alt="icon" />
+                      <div class="card__bottom-num">20</div>
+                      <img src="./image/icon_play2.svg" alt="icon" />
+                      <div class="card__bottom-level">min</div>
+                      <div class="card__bottom-num">40</div>
+                      <div class="card__bottom-num">₽</div>
+                    </div>
+                    <button class="card__btn">Перейти</button>
+                  </div>
+                </div>
+              </div>
+            </section>
+
+            <section class="app-2">
+              <div class="app__right">
+                <h3 class="app__title title">
+                  Скачайте бесплатно приложение SPEAK
+                </h3>
+                <div class="speak">
+                  <div class="speak__logo">
+                    <a href="#"
+                      ><img src="./image/Speak Logo 2.svg" alt="logo"
+                    /></a>
+                  </div>
+                  <div class="speak__list">
+                    <h6 class="speak__title">Speak</h6>
+                    <span class="speak__txt"> онлайн сессии с психологом </span>
+                    <span class="speak__txt">доступно для iOS и Android</span>
+                  </div>
+                </div>
+                <div class="btns">
+                  <div class="appstore">
+                    <img src="./image/appstore.png" alt="appstore" />
+                  </div>
+                  <div class="appstore">
+                    <img src="./image/playstore.png" alt="playstore" />
+                  </div>
+                </div>
+              </div>
+              <div class="app-2__left">
+                <img src="./image/phone-app-2.jpg" alt="phone">
+              </div>
+            </section>
+
+            <section class="reviews">
+              <h3 class="reviews_title title">Отзывы</h3>
+              <div class="reviews__slide">
+                <div class="review">
+                  <div class="review__img">
+                    <img src="./image/review-img.png" alt="photo">
+                  </div> 
+                  <div class="review__content">
+                    <p class="review__content-name">Sophia Jones</p>
+                    <p class="review__content-position">Teacher</p>
+                    <p class="review__content-info">After just 2 months, Speak has already made such an impact on my life. It has helped me develop manageable solutions to feelings of stress, anxiety, and overwhelm. Speaker helped me navigate the difficult stages of grief after losing my mom, with compassion and encouragement. And she’s easy to open up to, making me feel heard and understood.</p>
+                  </div> 
+                </div>
+                <div class="review">
+                    <div class="review__img">
+                      <img src="./image/review-2img.png" alt="photo">
+                    </div> 
+                    <div class="review__content">
+                      <p class="review__content-name">Jay K. Braun</p>
+                      <p class="review__content-position">Artist</p>
+                      <p class="review__content-info">After just 2 months, Speak has already made such an impact on my life. It has helped me develop manageable solutions to feelings of stress, anxiety, and overwhelm. Speaker helped me navigate the difficult stages of grief after losing my mom, with compassion and </p>
+                    </div>  
+                </div> 
+              </div>
+              <div class="dots">
+                <div class="dots__line"></div>
+                <div class="dots__line"></div>
+                <div class="dots__line"></div>
+                <div class="dots__line"></div>
+                <div class="dots__line"></div>
+                <div class="dots__line"></div>
+                <div class="dots__line"></div>
+                <div class="dots__line"></div>
+              </div>                                                                              
+            </section>
           </div>
         </main>
-      </div>
-    </header>
   </body>
 </html>
