Finish html css

--- a/index.html
+++ b/index.html
@@ -616,17 +616,103 @@
                       <p class="review__content-info">After just 2 months, Speak has already made such an impact on my life. It has helped me develop manageable solutions to feelings of stress, anxiety, and overwhelm. Speaker helped me navigate the difficult stages of grief after losing my mom, with compassion and </p>
                     </div>  
                 </div> 
+                <div class="dots">
+                  <div class="dots__line"></div>
+                  <div class="dots__line"></div>
+                  <div class="dots__line"></div>
+                  <div class="dots__line"></div>
+                  <div class="dots__line"></div>
+                  <div class="dots__line"></div>
+                </div>
               </div>
-              <div class="dots">
-                <div class="dots__line"></div>
-                <div class="dots__line"></div>
-                <div class="dots__line"></div>
-                <div class="dots__line"></div>
-                <div class="dots__line"></div>
-                <div class="dots__line"></div>
-                <div class="dots__line"></div>
-                <div class="dots__line"></div>
-              </div>                                                                              
+                                                                                          
+            </section>
+
+            <section class="seo">
+              <h3 class="seo__title title">Детский психолог онлайн</h3>
+              <div class="seo__description">
+                <div class="seo__col">
+                  <div class="paragraph">
+                    <h4 class="paragraph__title">Чем поможет детский психолог онлайн?</h4>
+                    <p class="paragraph__txt">Каждый родитель хочет, чтобы его ребенок рос сильной уравновешенной личностью. Мы понимаем, что именно в детстве формируются зачатки характера. Как справиться с возникающими проблемами, как выстроить отношения с ребенком, чтобы он доверял вам? На эти и другие вопросы поможет ответить детский психолог онлайн.</p>
+                  </div>
+                  <div class="paragraph">
+                    <h4 class="paragraph__title">Преимущества онлайн-консультации детского психолога</h4>
+                    <p class="paragraph__txt">Главный плюс сеанса в таком формате – экономия времени. Вам не придется тратить время на дорогу и долгие сборы. Все, что нужно – компьютер или смартфон, микрофон и блокнот с ручкой, чтобы записывать важную информацию. Если вам или ребенку тяжело общаться с незнакомым человеком лично, онлайн-связь в этом случае упростит дело.</p>
+                  </div>
+                  <div class="paragraph">
+                    <h4 class="paragraph__title">Когда нужна помощь детского психолога онлайн?</h4>
+                    <p class="paragraph__txt">Онлайн-консультация детского психолога может быть полезна, если у вас есть вопросы по таким темам, как:</p>
+                    <ul class="paragraph__list">
+                      <li class="paragraph__item">Плохая успеваемость;</li>
+                      <li class="paragraph__item">Стеснительность;</li>
+                      <li class="paragraph__item">Цифровая зависимость;</li>
+                      <li class="paragraph__item">Агрессия;</li>
+                      <li class="paragraph__item">Потеря близкого в семье;</li>
+                      <li class="paragraph__item">Возрастной кризис;</li>
+                      <li class="paragraph__item">Подготовка к детскому саду или школе;</li>
+                      <li class="paragraph__item">Профориентация.</li>
+                    </ul>
+                      <p class="paragraph__txt">Это лишь часть тем, которые можно затронуть. Помните, что, если возникает ситуация, в которой вы самостоятельно не можете разобраться, сейчас консультация детского психолога онлайн поможет найти ответы.</p>    
+                  </div>
+                  <div class="paragraph">
+                    <h4 class="paragraph__title">Как проходит онлайн-консультация детского психолога?</h4>
+                    <p class="paragraph__txt">Задать вопрос детскому психологу онлайн может как сам ребенок, так и родитель.</p>
+                  </div>
+                </div>
+                <div class="seo__col">
+                  <div class="paragraph">
+                  <p class="paragraph__txt">На первом сеансе обычно присутствует родитель или опекун, а также сам «виновник торжества». Следующие сеансы могут быть и без взрослого, если ребенок сам в состоянии связаться через интернет.</p>
+                  <p class="paragraph__txt">Бывает и так, что сначала ребенку присутствовать необязательно. В этом случае работа происходит с родителем, а если есть необходимость, позже присоединяется ребенок.</p> 
+                  <p class="paragraph__txt">Психолог по детским вопросам онлайн может попросить ребенка нарисовать что-то, далее по этим рисункам он проведет диагностику. Родитель тоже является звеном связи с психикой ребенка. Через него психолог может сделать вывод о том, какая проблема сейчас назрела.</p> 
+                  <p class="paragraph__txt"> Если специалист попросит вас пройти обследование или сдать анализы для более ясной картины, не пугайтесь, это нормально. Таким образом, вы оба сможете исключить какие-либо диагнозы</p>
+                </div>
+                <div class="paragraph">
+                  <h4 class="paragraph__title">О чем поговорить с детским психологом?</h4>
+                  <p class="paragraph__txt">Родители малышей часто обращаются с вопросами об адаптации в детском саду. Есть тревожные мамы, которые сомневаются, стоит ли отдавать малыша в сад или же пока слишком рано. Очень многих волнует, что воспитатель будет срываться на ребенка. Это логично, ведь в силу того, что в СМИ регулярно появляются жуткие новости о чудовищных ЧП в детсадах, беспокойство обосновано.</p>
+                  <p class="paragraph__txt">Отдельный вопрос подготовки к саду. В интернете полно информации в таком ключе: «ребенок должен научиться самостоятельно есть, ходить в туалет и засыпать сам перед тем, как идти в сад». Особо мнительные беспрекословно верят, другие понимают: ребенок ничего никому не должен. Его невозможно научить чему-то, пока он сам не захочет делать это. «Дрессировке» малыши не поддаются. Но пугаться не стоит, в любом случае, воспитатели будут помогать малышам в этих вопросах. Главное – настроиться на позитив и верить в хорошее.</p> 
+                  <p class="paragraph__txt">Дети постарше сталкиваются с проблемами переходного возраста, неуверенностью в себе, безответной любовью и другими. Если вы понимаете, что вам с чадом необходима онлайн-консультация, вы можете выбрать специалиста на нашем сайте.</p>  
+                  </div> 
+                </div>
+              </div>
+            </section>
+
+            <section class="footer">
+              <div class="footer__left">
+              <a class="footer__logo logo" href="#">
+                <img class="logo__img" src="image/logo.svg" alt="logo"/>
+              </a>
+              <div class="footer__menu">
+<ul class="menu__list">
+  <li class="menu__list-item">Home</li>
+  <li class="menu__list-item">About us</li>
+</ul>
+<ul class="menu__list">
+  <li class="menu__list-item">Blog</li>
+  <li class="menu__list-item">Contact</li>
+</ul>
+<ul class="menu__list">
+  <li class="menu__list-item">Privacy Policy</li>
+  <li class="menu__list-item">Terms and Conditions</li>
+</ul>
+              </div>
+            </div>
+            <div class="footer__right">
+              <div class="footer__socials">
+                <img class="socials__img" src="./image/face-Vector.svg" alt="facebook">
+                <img class="social__img" src="./image/insta2Vector.svg" alt="instagram">
+                <img class="socials__img" src="./image/linkedin-Vector.png" alt="linkedin">
+                <img class="socials__img" src="./image/twitter.svg" alt="twitter">
+              </div>
+              <div class="footer__contacts">
+<a class="footer__mail" href="mailto:info@speak.help">
+  <img class="footer__img" src="./image/icon_mail.svg" alt="mail">info@speak.help</a>
+              </div>
+              <div class="footer__address">
+                <img class="footer__address-img" src="./image/icon_pin.svg" alt="address">
+                33 W 60th Street, 8th FI New York, NY 10023
+              </div>
+            </div>
             </section>
           </div>
         </main>
